refactor(security): update CORS configuration to use allowed origin patterns and expose Authorization header